--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.12.2",
+    "ejs": "^2.3.1",
+    "express": "^4.12.3",
+    "method-override": "^2.3.2",
+    "redis": "^0.12.1",
+    "socket.io": "^1.3.5"
+  }
 }
